# airbnb-clone

./: db.sqlite3  pyproject.toml
bookings/: models.py
bookings/migrations/: 0001_initial.py
categories/: models.py  serializers.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py
config/: settings.py
direct_messages/: models.py
direct_messages/migrations/: 0001_initial.py
experiences/: admin.py  models.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_details.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_rename_price_house_price_per_night.py  0003_house_pets_allowed.py
medias/: models.py
medias/migrations/: 0001_initial.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py
rooms/: admin.py  models.py  serializers.py  views.py
rooms/migrations/: 0001_initial.py  0002_room_name_alter_amenity_description.py  0003_alter_room_name.py  0004_alter_amenity_options.py  0005_room_category.py  0006_alter_room_amenities_alter_room_category_and_more.py
users/: admin.py  models.py  serialziers.py
users/migrations/: 0001_initial.py  0002_rename_avartar_user_avatar.py  0003_alter_user_avatar.py
wishlists/: models.py
wishlists/migrations/: 0001_initial.py
